feat: initial commit

--- a/cpp_ai_utils/cpp_ai_utils.vcxproj
+++ b/cpp_ai_utils/cpp_ai_utils.vcxproj
@@ -70,6 +70,7 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\props\cpp_redis.props" />
     <Import Project="..\..\props\OpenCV_ReleaseX64.props" />
+    <Import Project="..\..\props\spdlog.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
